--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitlab-user-mgmt",
+  "name": "gitlab-mgmt",
   "version": "0.0.0",
   "description": "a user management node client for gitlab",
   "main": "index.js",
@@ -18,11 +18,11 @@
   "author": "Brian Vanderbusch",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/LongLiveCHIEF/gitlab-user-mgmt/issues"
+    "url": "https://github.com/LongLiveCHIEF/gitlab-mgmt/issues"
   },
-  "homepage": "https://github.com/LongLiveCHIEF/gitlab-user-mgmt",
+  "homepage": "https://github.com/LongLiveCHIEF/gitlab-mgmt",
   "dependencies": {
-    "csv": "^0.4.0",
-    "gitlab": "^0.8.6"
+    "bluebird": "^2.2.1",
+    "csv": "^0.4.0"
   }
 }
